# rust-mongo-project

./: Cargo.toml
src/: db.rs  handler.rs  main.rs
