[package]
name = "rust-mongo-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0" , features = ["derive"]}
serde_json = "1.0"
mongo-rs = "0.1.1"
chrono = {version = "0.4.35" , features = ["serde"]}
thiserror = "1.0.58"
tokio = "1.36.0"
warp = "0.3.6"
mongodb = "2.8.2"
futures = {version = "0.3.30" , default-features = false , features = ["async-await"]}
